--- a/Beginner.html
+++ b/Beginner.html
@@ -15,7 +15,7 @@
         <p>Hello from the outsiiiiiiiiide. I mustve called a thousand <a
                 href="https://www.agdaily.com/livestock/top-10-cattle-breeds-united-states/">tiiiiiiiiiiiiiiiiaiaiaiames</a>
         </p>
-        <h1>I am h1(There are h1-h6) moo</h1>
+        <h1>I am h1(There are h1-h6)</h1>
 
         <!-- Ordered List-->
         <h3>Ordered list</h3>
