--- a/Beginner.html
+++ b/Beginner.html
@@ -7,7 +7,7 @@
     <head>
         <!-- Creates the title of the page-->
         <title>MOO BAMBA</title>
-    </head>
+    </head> 
     <!-- Everything must be inside the body or head tags-->
 
     <body>
@@ -20,7 +20,7 @@
         <!-- Ordered List-->
         <h3>Ordered list</h3>
         <ol>
-            <li>BOOM</li>
+            <li>BOOM mah</li>
             <li>BAP</li>
             <li>POW</li>
         </ol>
