--- a/Beginner.html
+++ b/Beginner.html
@@ -20,7 +20,7 @@
         <!-- Ordered List-->
         <h3>Ordered list</h3>
         <ol>
-            <li>BOOM mah</li>
+            <li>BOOM</li>
             <li>BAP</li>
             <li>POW</li>
         </ol>
