--- a/Beginner.html
+++ b/Beginner.html
@@ -66,6 +66,18 @@
         <h3>Local Image(Not working?)</h3>
         <img src="Downloads/Cow.jpg" alt="This image isn't working so I am using an alt">
 
+        <!--Different types of semantic markup/tags-->
+        <!--Main (your main content)-->
+        <!--Nav (fill it with whatever you want; preferably links)-->
+        <!--Section (represents a standalone section of a webstie)-->
+        <!--Article (any self contained composition/anything that should be independtly redistributable or reusable)-->
+        <!--Aside (something that is not essential/indirectly related)-->
+        <!--time (calls something out as time) -->
+        <!--figure (represents a self contained piece of content with an optional caption) -->
+        <!--figcaption (the caption used in a figure element) -->
+        <!--abbreviation -->
+        <!--data -->
+
     </body>
 
 </html>
