--- a/htmlBasics.html
+++ b/htmlBasics.html
@@ -7,7 +7,7 @@
     <head>
         <!-- Creates the title of the page-->
         <title>MOO BAMBA</title>
-    </head> 
+    </head>
     <!-- Everything must be inside the body or head tags-->
 
     <body>
@@ -43,6 +43,7 @@
                 </ul>
             </li>
         </ul>
+
         <!--Links-->
         <h3>Links</h3>
         <a href="https://www.moo.com/us/">MOO</a>
@@ -77,6 +78,35 @@
         <!--figcaption (the caption used in a figure element) -->
         <!--abbreviation -->
         <!--data -->
+
+        <hr>
+        <!-- Table Stuff -->
+        <table>
+            <tr>
+                <th>Name</th>
+                <th>Average Mass</th>
+                <th>Fly?</th>
+            </tr>
+            <caption></caption>
+            <tr>
+                <td>Ostritch</td>
+                <td>104(230)</td>
+                <td>No</td>
+            </tr>
+
+            <tr>
+                <td>Beer</td>
+                <td>moo</td>
+                <td>looooom</td>
+            </tr>
+
+            <tr>
+                <td>Wild turkey</td>
+                <td>39(86)</td>
+                <td>Yes</td>
+            </tr>
+
+        </table>
 
     </body>
 
