--- a/htmlBasics.html
+++ b/htmlBasics.html
@@ -82,11 +82,13 @@
         <hr>
         <!-- Table Stuff -->
         <table>
-            <tr>
-                <th>Name</th>
-                <th>Average Mass</th>
-                <th>Fly?</th>
-            </tr>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Average Mass</th>
+                    <th>Fly?</th>
+                </tr>
+            </thead>
             <caption></caption>
             <tr>
                 <td>Ostritch</td>
