--- a/htmlBasics.html
+++ b/htmlBasics.html
@@ -89,25 +89,26 @@
                     <th>Fly?</th>
                 </tr>
             </thead>
-            <caption></caption>
-            <tr>
-                <td>Ostritch</td>
-                <td>104(230)</td>
-                <td>No</td>
-            </tr>
+            <tbody>
+                <caption></caption>
+                <tr>
+                    <td>Ostritch</td>
+                    <td>104(230)</td>
+                    <td>No</td>
+                </tr>
 
-            <tr>
-                <td>Beer</td>
-                <td>moo</td>
-                <td>looooom</td>
-            </tr>
+                <tr>
+                    <td>Beer</td>
+                    <td>moo</td>
+                    <td>looooom</td>
+                </tr>
 
-            <tr>
-                <td>Wild turkey</td>
-                <td>39(86)</td>
-                <td>Yes</td>
-            </tr>
-
+                <tr>
+                    <td>Wild turkey</td>
+                    <td>39(86)</td>
+                    <td>Yes</td>
+                </tr>
+            </tbody>
         </table>
 
     </body>
