--- a/htmlBasics.html
+++ b/htmlBasics.html
@@ -78,34 +78,41 @@
         <!--figcaption (the caption used in a figure element) -->
         <!--abbreviation -->
         <!--data -->
-
         <hr>
+
         <!-- Table Stuff -->
         <table>
             <thead>
                 <tr>
-                    <th>Name</th>
-                    <th>Average Mass</th>
-                    <th>Fly?</th>
+                    <th rowspan="2">Animal</th>
+                    <th colspan="2">Average Mass</th>
+                    <th rowspan="2">Fly?</th>
+                </tr>
+                <tr>
+                    <th>KG</th>
+                    <th>LBs</th>
                 </tr>
             </thead>
             <tbody>
                 <caption></caption>
                 <tr>
                     <td>Ostritch</td>
-                    <td>104(230)</td>
+                    <td>104</td>
+                    <td>3000</td>
                     <td>No</td>
                 </tr>
 
                 <tr>
                     <td>Beer</td>
                     <td>moo</td>
+                    <td>titty</td>
                     <td>looooom</td>
                 </tr>
 
                 <tr>
                     <td>Wild turkey</td>
-                    <td>39(86)</td>
+                    <td>39</td>
+                    <td>86</td>
                     <td>Yes</td>
                 </tr>
             </tbody>
