--- a/htmlBasics.html
+++ b/htmlBasics.html
@@ -58,6 +58,7 @@
         outside. I <b>mustve</b> <i>called</i> a <sup>thousand</sup> <sub>tiiiiimes</sub><br>
         Dont forget about Entity Codes(special codes or sequences used inside html that results in different
         characters)</p>
+    <p>I hate butter</p>
 
     <!-- Image on the web-->
     <h3>Image on the web</h3>
