--- a/forms.html
+++ b/forms.html
@@ -9,11 +9,11 @@
   <body>
     <h1>Forms Demo</h1>
     <form action="/tacos">
-      <input type = "text" placeholder="username">
-      <input type = "password" placeholder="password">
-      <input type = "color">
-      <input type = "number">
-      <input type = "time">
+      <label for="username">Enter a username:</label>
+      <input id="username" type="text" placeholder="username" />
+      <input type="password" placeholder="password" />
+      <input type="color" />
+      <input type="number" />
     </form>
   </body>
 </html>
