--- a/forms.html
+++ b/forms.html
@@ -9,11 +9,22 @@
   <body>
     <h1>Forms Demo</h1>
     <form action="/tacos">
-      <label for="username">Enter a username:</label>
-      <input id="username" type="text" placeholder="username" />
-      <input type="password" placeholder="password" />
-      <input type="color" />
-      <input type="number" />
+      <p>
+        <label for="username">Enter a username:</label>
+        <input id="username" type="text" placeholder="username" />
+      </p>
+      <p>
+        <label for="password">Enter a password:</label>
+        <input id="password" type="password" placeholder="password" />
+      </p>
+      <p>
+        <label for="color">Enter a color:</label>
+        <input id="color" type="color" />
+      </p>
+      <p>
+        <label for="number">Enter a number:</label>
+        <input type="number" id="number" />
+      </p>
     </form>
   </body>
 </html>
