--- a/HTML/forms.html
+++ b/HTML/forms.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <h1>Forms Demo</h1>
+    <button>OUTSIDE FORM</button>
     <form action="/tacos">
+      <button type="button">This button does not submit</button>
       <p>
         <label for="username">Enter a username:</label>
         <input id="username" type="text" placeholder="username" />
@@ -25,6 +27,7 @@
         <label for="number">Enter a number:</label>
         <input type="number" id="number" />
       </p>
+      <button>Submit</button>
     </form>
   </body>
 </html>
