--- a/HTML/forms.html
+++ b/HTML/forms.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Forms Demo</h1>
+    <!-- Outside of a form, no default behavior -->
     <button>OUTSIDE FORM</button>
     <form action="/tacos">
       <button type="button">This button does not submit</button>
