--- a/HTML/htmlBasics.html
+++ b/HTML/htmlBasics.html
@@ -1,5 +1,5 @@
 <!-- "!Tab" for quick skeleton-->
-<!-- Use "CTRL /" to quickly make a comment or make lines commented -->
+<!-- Use "Cmd /" to quickly make a comment or make lines commented -->
 
 <!DOCTYPE html>
 <html>
