--- a/HTML/forms.html
+++ b/HTML/forms.html
@@ -14,19 +14,19 @@
       <button type="button">This button does not submit</button>
       <p>
         <label for="username">Enter a username:</label>
-        <input id="username" type="text" placeholder="username" />
+        <input id="username" type="text" placeholder="username" name="username"/>
       </p>
       <p>
         <label for="password">Enter a password:</label>
-        <input id="password" type="password" placeholder="password" />
+        <input id="password" type="password" placeholder="password" name="password"/>
       </p>
       <p>
         <label for="color">Enter a color:</label>
-        <input id="color" type="color" />
+        <input id="color" type="color" name="color"/>
       </p>
       <p>
         <label for="number">Enter a number:</label>
-        <input type="number" id="number" />
+        <input type="number" id="number" name="num"/>
       </p>
       <button>Submit</button>
     </form>
