--- a/HTML/formsAndButtons.html
+++ b/HTML/formsAndButtons.html
@@ -40,5 +40,10 @@
       </p>
       <button>Submit</button>
     </form>
+    <hr>
+    <form action="https://www.reddit.com/search/">
+      <input type="text" name="q" />
+      <button>Search Reddit</button>
+    </form>
   </body>
 </html>
