--- a/HTML/formsAndButtons.html
+++ b/HTML/formsAndButtons.html
@@ -41,6 +41,7 @@
       <button>Submit</button>
     </form>
     <hr>
+    <!-- Searching on reddit -->
     <form action="https://www.reddit.com/search/">
       <input type="text" name="q" />
       <button>Search Reddit</button>
