--- a/HTML/formsAndButtons.html
+++ b/HTML/formsAndButtons.html
@@ -40,11 +40,16 @@
       </p>
       <button>Submit</button>
     </form>
-    <hr>
+    <hr />
     <!-- Searching on reddit -->
-    <form action="https://www.reddit.com/search/">
+    <form action="https://www.reddit.com/search">
       <input type="text" name="q" />
       <button>Search Reddit</button>
+    </form>
+    <!-- Searching on google -->
+    <form action="https://www.google.com/search">
+      <input type="text" name="q" />
+      <button>Search Google</button>
     </form>
   </body>
 </html>
