--- a/HTML/formsAndButtons.html
+++ b/HTML/formsAndButtons.html
@@ -51,5 +51,10 @@
       <input type="text" name="q" />
       <button>Search Google</button>
     </form>
+    <!-- Searching on youtube -->
+    <form action="https://www.youtube.com/results">
+      <input type="text" name="search_query" />
+      <button>Search Youtube</button>
+    </form>
   </body>
 </html>
