--- a/HTML/formsAndButtons.html
+++ b/HTML/formsAndButtons.html
@@ -41,6 +41,7 @@
       <button>Submit</button>
     </form>
     <hr />
+    <h2>Searching</h2>
     <!-- Searching on reddit -->
     <form action="https://www.reddit.com/search">
       <input type="text" name="q" />
@@ -56,7 +57,7 @@
       <input type="text" name="search_query" />
       <button>Search Youtube</button>
     </form>
-    <h2>More Inputs</h2>
+    <h2>Checks and Radio</h2>
     <!-- "checked" begins the button checked -->
     <!-- radio buttons must have same name -->
     <form action="/birds">
@@ -69,6 +70,16 @@
         <input type="radio" name="size" id="m" value="Mediuem"/>
         <label for="l">L</label>
         <input type="radio" name="size" id="l" value="Large"/>
+      </p>
+      <h2>Select and Option</h2>
+      <p>
+        <label for="meal">Please select and entree</label>
+        <select name="meal" id="meal">
+          <option value="">--Please choose and option--</option>
+          <option value="fish">Fish</option>
+          <option value="veg">Vegatarian</option> 
+          <option value="chicken">Chicken</option>
+        </select>
       </p>
       <button>Submit Form</button>
     </form>
