--- a/HTML/formsAndButtons.html
+++ b/HTML/formsAndButtons.html
@@ -86,6 +86,10 @@
       <label for="number">Enter a number:</label>
         <input type="number" id="number" name="num" min="1" max="1000"/>
     </p>
+    <p>
+      <label for="requests">Any special Requests?</label>
+      <textarea id="requests" cols="30" rows="2" name="requests?" placeholder="Type something here"></textarea>
+    </p>
       <button>Submit Form</button>
     </form>
   </body>
