--- a/HTML/formsAndButtons.html
+++ b/HTML/formsAndButtons.html
@@ -15,14 +15,12 @@
       <p>
         <label for="username">Enter a username:</label>
         <input
-          id="username" type="text" placeholder="username" name="username"
-        />
+          id="username" type="text" placeholder="username" name="username"/>
       </p>
       <p>
         <label for="password">Enter a password:</label>
         <input
-          id="password" type="password" placeholder="password" name="password"
-        />
+          id="password" type="password" placeholder="password" name="password" />
       </p>
       <p>
         <label for="color">Enter a color:</label>
