--- a/HTML/formsAndButtons.html
+++ b/HTML/formsAndButtons.html
@@ -84,5 +84,18 @@
     </p>
       <button>Submit Form</button>
     </form>
+    <h2>Validations Demo</h2>
+    <form action="/dummy">
+      <label for="first">Enter first name</label>
+      <input type="text" name="first" id="first" required>
+      <p>
+      <label for="username">Username</label>
+      <input type="text" name="username" id="username" minlength="5" maxlength="20" required>
+      </p>
+      <p>
+        <input type="email" required>
+      </p>
+      <button>Form</button>   
+    </form>
   </body>
 </html>
