--- a/HTML/formsAndButtons.html
+++ b/HTML/formsAndButtons.html
@@ -95,7 +95,7 @@
       <p>
         <input type="email" required>
       </p>
-      <button>Form</button>   
+      <butto>Form<      /button>
     </form>
   </body>
 </html>
