--- a/HTML/formsAndButtons.html
+++ b/HTML/formsAndButtons.html
@@ -7,7 +7,7 @@
     <title>Forms Demo</title>
   </head>
   <body>
-    <h1>Forms Demo</h1>
+    <h>Forms Demo</h1>
     <!-- Outside of a form, no default behavior -->
     <button>OUTSIDE FORM</button>
     <form action="/tacos">
