--- a/HTML/formsAndButtons.html
+++ b/HTML/formsAndButtons.html
@@ -95,7 +95,10 @@
       <p>
         <input type="email" required>
       </p>
-      <butto>Form</button>
+      <p>
+        <input type="url" required>
+      </p>
+      <button>Form</button>
     </form>
   </body>
 </html>
