--- a/HTML/formsAndButtons.html
+++ b/HTML/formsAndButtons.html
@@ -15,13 +15,11 @@
       <button type="button">This button does not submit</button>
       <p>
         <label for="username">Enter a username:</label>
-        <input
-          id="username" type="text" placeholder="username" name="username"/>
+        <input id="username" type="text" placeholder="username" name="username"/>
       </p>
       <p>
         <label for="password">Enter a password:</label>
-        <input
-          id="password" type="password" placeholder="password" name="password" />
+        <input id="password" type="password" placeholder="password" name="password" />
       </p>
       <p>
         <label for="color">Enter a color:</label>
