--- a/HTML/MarathonRegistration.html
+++ b/HTML/MarathonRegistration.html
@@ -11,16 +11,17 @@
     <form action="/MarathonForm">
       <div>
         <label for="firstname">First Name</label>
-        <input type="text" name="firstname" id="firstname" required/>
+        <input type="text" name="firstname" id="firstname" required />
         <label for="lastname">Last Name</label>
-        <input type="text" name="lastname" id="lastname" required/>
+        <input type="text" name="lastname" id="lastname" required />
       </div>
+
       <div>
         <p>Select a Race:</p>
         <input type="radio" name="type" id="5k" value="Fun Run 5k" />
         <label for="5k">Fun Run 5k</label>
-
       </div>
+
       <div>
         <input type="radio" name="type" id="Half" value="Half Marathon" />
         <label for="Half">Half Marathon</label>
@@ -33,9 +34,9 @@
 
       <div>
         <label for="Email:">Email</label>
-        <input type="email" name="email" id="email" required/>
+        <input type="email" name="email" id="email" required />
         <label for="password">Password:</label>
-        <input type="password" name="password" id="password" required/>
+        <input type="password" name="password" id="password" required />
       </div>
 
       <div>
@@ -46,7 +47,9 @@
           <option value="adult">30-39</option>
           <option value="middle age">40-49</option>
           <option value="senior">50+</option>
+        </select>
       </div>
+
       <button>Register</button>
     </form>
   </body>
