more css basicCSS

--- a/CSS/basicCSS.html
+++ b/CSS/basicCSS.html
@@ -11,12 +11,13 @@
         color: palevioletred;
       }
     </style> -->
-    <link rel="stylesheet" href="app.css" />
+    <link rel="stylesheet" href="BasicCSS.css" />
   </head>
   <body>
     <!-- Inline Styles: Bad -->
     <!-- <h1 style="color: rgb(247, 42, 237)">Hello World</h1>
     <button style="background-color: aqua">Hello Moo</button> -->
+    <h1>Eat balls</h1>
     <h2>Hello Moo</h2>
     <h2>Hello Moo</h2>
     <h2>Hello Moo</h2>
