--- a/CSS/basicCSS.html
+++ b/CSS/basicCSS.html
@@ -11,7 +11,7 @@
         color: palevioletred;
       }
     </style> -->
-    <link rel="stylesheet" href="BasicCSS.css" />
+    <link rel="stylesheet" href="basicCSS.css" />
   </head>
   <body>
     <!-- Inline Styles: Bad -->
