--- a/HTML/BasicNotes.html
+++ b/HTML/BasicNotes.html
@@ -17,7 +17,7 @@
       Dont forget about Entity Codes(special codes or sequences used inside html
       that results in different characters)
     </p>
-    <p>I hate butter</p>
+    <p>I hate butter and moo</p>
   </body>
 </html>
 <!--Different types of semantic markup/tags-->
