what does the fox say

--- a/HTML/basicCSS.html
+++ b/HTML/basicCSS.html
@@ -19,9 +19,9 @@
     <button style="background-color: aqua">Hello Moo</button> -->
     <h1>Eat balls</h1>
     <h2>Hello Moo</h2>
-    <h2>Hello Moo</h2>
-    <h2>Hello Moo</h2>
-    <h2>Hello Moo</h2>
+    <h2>Hello Oink</h2>
+    <h2>Hello Meow</h2>
+    <h2>Hello Dindingdingdingdingdingdingdingding</h2>
 
     <button>Button 1</button>
     <button>Button 2</button>
