--- a/HTML/hipsterLogo.html
+++ b/HTML/hipsterLogo.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Hipster Logo</title>
-    <link rel="stylesheet" href="/CSS/hipsterLogo.css" />
+    <link rel="stylesheet" href="../css/hipsterLogo.css" />
   </head>
 
   <body>
