fixed errors in html

--- a/HTML/formsAndButtons.html
+++ b/HTML/formsAndButtons.html
@@ -1,4 +1,3 @@
-<!-- Auto Format doesnt work on this file for some reason -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,7 +7,7 @@
     <title>Forms Demo</title>
   </head>
   <body>
-    <h>Forms Demo</h1>
+    <h1>Forms Demo</h1>
     <!-- Outside of a form, no default behavior -->
     <button>OUTSIDE FORM</button>
     <form action="/tacos">
@@ -27,7 +26,7 @@
       </p>
       <button>Submit</button>
     </form>
-    <hr />
+    <hr>
     <h2>Searching</h2>
     <!-- Searching on reddit -->
     <form action="https://www.reddit.com/search">
@@ -89,7 +88,7 @@
       <input type="text" name="first" id="first" required>
       <p>
       <label for="username">Username</label>
-      <input type="text" name="username" id="username" minlength="5" maxlength="20" required>
+      <input type="text" name="username" id="Validations" minlength="5" maxlength="20" required>
       </p>
       <p>
         <input type="email" required>
@@ -101,3 +100,5 @@
     </form>
   </body>
 </html>
+<!-- Auto Format doesnt work on this file for some reason -->
+
