--- a/HTML/basicCSS.html
+++ b/HTML/basicCSS.html
@@ -11,7 +11,7 @@
         color: palevioletred;
       }
     </style> -->
-    <link rel="stylesheet" href="../css/basicCSS.css" />
+    <link rel="stylesheet" href="../css/basicCSS.css" /><!--USE THE DOUBLE DOT FOR IF IT CSS IS IN ITS OWN FOLDER  -->
   </head>
   <body>
     <!-- Inline Styles: Bad -->
