--- a/HTML/boxModel.html
+++ b/HTML/boxModel.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Box Model</title>
-        <link rel="stylesheet" href="../css/boxModel.css" /> 
+		<link rel="stylesheet" href="../css/boxModel.css" />
 	</head>
 	<body>
 		<div id="one">
@@ -14,17 +14,19 @@
 			Placeat voluptatem dignissimos commodi? Dicta possimus consequatur debitis
 			accusantium consectetur voluptatem.
 		</div>
-        <div id="two">
+		<div id="two">
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, delectus
 			enim exercitationem officiis perspiciatis dolor! Totam quo quod cum.
 			Placeat voluptatem dignissimos commodi? Dicta possimus consequatur debitis
 			accusantium consectetur voluptatem.
 		</div>
-        <div id="three">
+		<div id="three">
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, delectus
 			enim exercitationem officiis perspiciatis dolor! Totam quo quod cum.
 			Placeat voluptatem dignissimos commodi? Dicta possimus consequatur debitis
 			accusantium consectetur voluptatem.
 		</div>
+
+		<button>Pad me</button>
 	</body>
 </html>
