--- a/HTML/boxModel.html
+++ b/HTML/boxModel.html
@@ -8,6 +8,13 @@
 		<link rel="stylesheet" href="../css/boxModel.css" />
 	</head>
 	<body>
+		<h1>Hello</h1>
+		<h1>My baby</h1>
+		<span>Herro</span>
+		<span>Monika</span>
+		<div></div>
+		<div></div>
+		<div></div>
 		<div id="one">
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, delectus
 			enim exercitationem officiis perspiciatis dolor! Totam quo quod cum.
