--- a/basic/firstCSSExercise/firstCSSExercise.html
+++ b/basic/firstCSSExercise/firstCSSExercise.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>First CSS</title>
-    <link rel="stylesheet" href="../css/firstCSSExercise.css" />
+    <link rel="stylesheet" href="firstCSSExercise.css" />
   </head>
   <body>
     <h1>Please make me green</h1>
