--- a/basic/selectors/selectors.html
+++ b/basic/selectors/selectors.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<title>Selectors</title>
-		<link rel="stylesheet" href="../css/selectors.css" />
+		<link rel="stylesheet" href="selectors.css" />
 	</head>
 	<body>
 		<p>I am so not used to using html after my Java class lmao</p>
