--- a/basic/ units/units.html
+++ b/basic/ units/units.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<link rel="stylesheet" href="../css/units.css" />
+		<link rel="stylesheet" href="units.css" />
 		<title>Units</title>
 	</head>
 	<body>
