--- a/basic/hipsterLogo/hipsterLogo.html
+++ b/basic/hipsterLogo/hipsterLogo.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Hipster Logo</title>
-    <link rel="stylesheet" href="../css/hipsterLogo.css" />
+    <link rel="stylesheet" href="hipsterLogo.css" />
   </head>
 
   <body>
