Changes based on new UI project

--- a/html_css_basics/basicCSS/basicCSS.html
+++ b/html_css_basics/basicCSS/basicCSS.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Css Intro</title>
-    <!-- The Style Element -->
-    <!-- <style>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Css Intro</title>
+		<!-- The Style Element -->
+		<!-- <style>
       h2 {
         color: palevioletred;
       }
     </style> -->
-    <link rel="stylesheet" href="basicCSS.css" /><!--USE THE DOUBLE DOT FOR IF IT CSS IS IN ITS OWN FOLDER  -->
-  </head>
-  <body>
-    <!-- Inline Styles: Bad -->
-    <!-- <h1 style="color: rgb(247, 42, 237)">Hello World</h1>
+		<link rel="stylesheet" href="basicCSS.css" />
+		<!--USE THE DOUBLE DOT FOR IF IT CSS IS IN ITS OWN FOLDER  -->
+	</head>
+	<body>
+		<!-- Inline Styles: Bad -->
+		<!-- <h1 style="color: rgb(247, 42, 237)">Hello World</h1>
     <button style="background-color: aqua">Hello Moo</button> -->
-    <h1>Eat balls</h1>
-    <h2>Hello Moo</h2>
-    <h2>Hello Oink</h2>
-    <h2>Hello Meow</h2>
-    <h2>Hello Dindingdingdingdingdingdingdingding</h2>
+		<h1>Hello World</h1>
+		<h2>Hello Moo</h2>
+		<h2>Hello Oink</h2>
+		<h2>Hello Meow</h2>
 
-    <button>Button 1</button>
-    <button>Button 2</button>
-    <p>
-      bkhjcbkhcvwcgvwcgvwiygtcvwiygcv weuygweuyc we yubgweugb weyudxg weyudxgw
-      dyu wedyug weduyv weygvsdhgcvsdjhGCVSCSD CHV
-    </p>
-  </body>
+		<button>Button 1</button>
+		<button>Button 2</button>
+		<p>
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus,
+			corporis veritatis at id architecto, in rem ad dolore sed repellendus,
+			ducimus facere quam ut! Autem id doloribus tempore libero minima!
+		</p>
+	</body>
 </html>
